eks-cluster/backend/spring-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-deploy
  namespace: backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - springboot
                topologyKey: kubernetes.io/hostname
      containers:
        - name: spring-container
          image: yeonheelee/travelwonpick-server:37
          resources:
            requests:
              cpu: "300m" # Spring Boot는 더 많은 CPU 리소스 필요
              memory: "512Mi" # JVM 기반이므로 더 많은 메모리 할당
            limits:
              cpu: "450m" # 최대 1 CPU 코어
              memory: "1Gi" # 최대 1GB 메모리
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: app-logs
              mountPath: /app/logs
      volumes:
        - name: app-logs
          hostPath:
            path: /app/logs
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: backend
spec:
  selector:
    app: springboot
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
