eks-cluster/backend/spring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  namespace: backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/subnets: subnet-016a7c40775fb08d1, subnet-063279ed163cacc2c
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=60
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /actuator
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /my
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /special
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /cards
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /manager
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 8080
